# cplusplus-primer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_examples.yml
aaa/: CMakeLists.txt  CMakeListsCPackConfiguration.txt  Description.txt  README.md  UIInstallerReadme.txt  Welcome.txt
aaa/include/aaa/: bar.hpp  foo.hpp
aaa/src/: bar.cpp  foo.cpp
example_1/: CMakeLists.txt  README.md
example_1/include/example_1/: function_1.hpp  function_2.hpp
example_1/src/: function_1.cpp  function_2.cpp  main.cpp
example_2/: CMakeLists.txt  README.md
example_2/src/: main.cpp
example_3/: CMakeLists.txt  CMakeListsCPackConfiguration.txt  README.md  Readme.md
example_3/src/: main.cpp
example_4/: CMakeLists.txt  CMakeListsCPackConfiguration.txt  Description.txt  README.md  UIInstallerReadme.txt  Welcome.txt
example_5/: CMakeLists.txt
example_5/include/example_5/: consume_class_that_adheres_to_concept.hpp  consume_class_with_interface.hpp  features.hpp  i_super_cool_features.hpp  impl_with_interface.hpp  impl_without_interface.hpp
example_5/src/: consume_class_that_adheres_to_concept.cpp  consume_class_that_adheres_to_concept.ipp  consume_class_with_interface.cpp  features.cpp  main.cpp
example_5/test/: CMakeLists.txt  test_consume.cpp
library_1/: CMakeLists.txt  README.md
library_1/include/library_1/: feature_set_1.hpp  feature_set_2.hpp
library_1/src/: feature_set_1.cpp  feature_set_2.cpp
polymorphism/: CMakeLists.txt  README.md
polymorphism/include/polymorphism/: consume_class_that_adheres_to_concept.hpp  consume_class_with_interface.hpp  has_super_cool_features.hpp  i_super_cool_features.hpp  impl_with_interface.hpp  impl_without_interface.hpp
polymorphism/src/: consume_class_that_adheres_to_concept.cpp  consume_class_that_adheres_to_concept.ipp  consume_class_with_interface.cpp  main.cpp
polymorphism/test/: CMakeLists.txt  test_consume.cpp
polymorphism/test/include/test_polymorphism/: mocking.hpp
polymorphism/test/src/: mocking.cpp  test_consume.cpp
